Enable google+ authentication in modal without disruptive page change.  Refactored index to be a bit more readable.  When user is logged in facebook and google+ login buttons will no longer display.  Instead we will show a simple play button.

--- a/login/app/public/styles.css
+++ b/login/app/public/styles.css
@@ -1,3 +1,6 @@
+
+body        { padding-top:80px; }
+
 .fa-padding {
     padding-right:5px;
 }
